src/components/Journey/Journey.scss
@import"../App.scss";

// Temporary border constants for designing. Remove or set to transparent 0px after use
$border: 2px solid orange;

.journey-container {
    height: 70vh;
    width: 98vw;
    position: relative;
    align-items: center;
    display:flex;
    gap:35px;
    border: solid 2px $blockColour;
    margin-bottom: 10px;
}

.journey-image-container {
    position: absolute;
    height: 90%;
    width: 58%;
    margin: 5px;
    left: 12%;
    border: $border;
    align-items: center;
}

.journey-info-container {
    position: absolute;
    height: 90%;
    width: 24%;
    right: 2.5%;
    margin: 5px;
    border: $border;
}

.journey-timeline-container {
    position: absolute;
    height: 90%;
    width: 10%;
    left: 0%;
    margin: 5px;
    border: $border;
}

style for journey card element
section.journey-card{
    display: flex;
    width: 85%;
    height:90%;
    margin-left:10%;
    margin-bottom: 30px;
    margin-top: 30px;
	gap:25px;
    padding:$cardSeparationDesktop;
    box-sizing: border-box;
    background-color: $blockColour;
}

.journey-card-image{
	width:40%;
	height: 300px;
    background-color: white;
}

.journey-card-text{
	width:60%;
    background-color:white;
    font-size: ;
}

//also optimised for mobile size of 375px
@media (max-width: 426px) {
    .journey-container{
        display:flex;
        gap:10px;
        width:98%;
        // we need change to adjust the mobile view;
    }

    .journey-image-container {
        height: 65%;
        width: 75%;
        margin: 5px;
        left: 17%;
      
    }
    .journey-info-container {
        width: 75%;
        height: 30%;
        bottom: 1%;
        left: 17%;
    }
    .journey-timeline-container {
        width: 12.5%;
        height: 95%;
        left: 1%;
    }

    style for journey card element
    section.journey-card{
        display: flex;
		flex-direction: column;
        height:600px;
        margin:5px 12px 5px 15%;
	}
    .journey-card-image{
        width: auto;
        height: 40%;
    }

    .journey-card-text{
        width: auto;
        height:60%;
    }
}

